--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/api/auth/[...nextauth].js",
-    "pages/HostMeeting.js"
+    "pages/api/auth/[...nextauth].js"
   ],
   "exclude": ["node_modules"]
 }
