--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/api/auth/[...nextauth].js"
-  ],
+, "pages/HostMeeting.js"  ],
   "exclude": ["node_modules"]
 }
