--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "dependencies": {
     "@daily-co/daily-js": "^0.13.0",
     "@heroicons/react": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
     "next": "10.1.3",
-    "next-auth": "^3.24.0",
+    "next-auth": "^3.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.8",
+    "@types/react": "^17.0.9",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2",
+    "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2"
   }
 }
